BACKEND: - Add CURRENT_TRIP functionality
