# backendCargoFlow/src/main/java/com/example/backendcargoflow/controller/TripController.java
@@ -3,10 +3,7 @@ package com.example.backendcargoflow.controller;
 import com.example.backendcargoflow.common.LogMessage;
 import com.example.backendcargoflow.controller.common.models.GenericApplicationResponseDto;
 import com.example.backendcargoflow.controller.trip.api.TripsApi;
-import com.example.backendcargoflow.controller.trip.models.AddNewTripRequestDto;
-import com.example.backendcargoflow.controller.trip.models.TripDto;
-import com.example.backendcargoflow.controller.trip.models.TripPageResponseDto;
-import com.example.backendcargoflow.controller.trip.models.TripSearchRequestDto;
+import com.example.backendcargoflow.controller.trip.models.*;
 import com.example.backendcargoflow.service.TripService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -74,5 +71,11 @@ public class TripController implements TripsApi {
     public TripDto getTrip(@PathVariable Long id) {
         log.info(String.format(LogMessage.GET_TRIP, id));
         return tripService.getTrip(id);
+    }
+
+    @Override
+    public CurrentTripDto getCurrentTrip() {
+        log.info(LogMessage.GET_CURRENT_TRIP);
+        return tripService.getCurrentTrip();
     }
 }
