# backendCargoFlow/src/main/resources/openapi/trip.yaml
@@ -104,6 +104,32 @@ paths:
               schema:
                 $ref: 'common.yaml#/components/schemas/GenericApplicationResponse'
 
+  /trip/currentTrip:
+    get:
+      tags:
+        - Trips
+      summary: Get current trip for authenticated driver
+      operationId: getCurrentTrip
+      responses:
+        '200':
+          description: Current trip was retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CurrentTrip'
+        '404':
+          description: Current trip was not found
+          content:
+            application/json:
+              schema:
+                $ref: 'common.yaml#/components/schemas/GenericApplicationResponse'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: 'common.yaml#/components/schemas/GenericApplicationResponse'
+
 components:
   schemas:
     TripStatus:
@@ -473,3 +499,69 @@ components:
         createdBy:
           type: string
           example: Isac Alexandru
+    CurrentTrip:
+      type: object
+      required:
+        - tripId
+        - tripStatus
+        - pickupAddress
+        - deliveryAddress
+        - pickupDateTime
+        - pickupTimeZone
+        - deliveryDateTime
+        - deliveryTimeZone
+        - cargoType
+      properties:
+        tripId:
+          type: integer
+          format: int64
+          example: 123
+        tripStatus:
+          $ref: '#/components/schemas/TripStatus'
+        pickupAddress:
+          $ref: '#/components/schemas/Address'
+        deliveryAddress:
+          $ref: '#/components/schemas/Address'
+        pickupDateTime:
+          type: string
+          format: local-date-time
+          example: 2026-05-15T12:00:00
+        pickupTimeZone:
+          type: string
+          minLength: 3
+          maxLength: 50
+          example: Europe/Bucharest
+        deliveryDateTime:
+          type: string
+          format: local-date-time
+          example: 2026-05-16T19:00:00
+        deliveryTimeZone:
+          type: string
+          minLength: 3
+          maxLength: 50
+          example: Europe/Berlin
+        cargoDescription:
+          type: string
+          minLength: 3
+          maxLength: 250
+          nullable: true
+          example: 10 pallets of electronics
+        cargoWeight:
+          type: integer
+          minimum: 1
+          maximum: 24000
+          nullable: true
+          example: 12345
+        cargoVolume:
+          type: integer
+          minimum: 1
+          maximum: 90
+          nullable: true
+          example: 65
+        cargoType:
+          $ref: '#/components/schemas/CargoType'
+        additionalInfo:
+          type: string
+          maxLength: 250
+          nullable: true
+          example: Driver must call 30 minutes before arrival
